fork of theme/english version

--- a/default.hbs
+++ b/default.hbs
@@ -29,7 +29,7 @@
             <div class="gxx_search" id="bdcs">
                 <form id="bdcs-search-form" action="http://zhannei.baidu.com/cse/search" method="get" target="_blank">
                     <input name="s" type="hidden" id="bdcs-search-form-sid" value="">
-                    <input type="search" name="q" class="bdcs-search-form-input" id="bdcs-search-form-input" value="" placeholder="搜索" />
+                    <input type="search" name="q" class="bdcs-search-form-input" id="bdcs-search-form-input" value="" placeholder="Search" />
                     <input name="entry" type="hidden" value="1">
                     <input type="submit" class="gxxicon bdcs-search-form-submit" id="bdcs-search-form-submit" value="&#xe601;" />
                 </form>
