--- a/partials/custom/owner.hbs
+++ b/partials/custom/owner.hbs
@@ -1,17 +1,15 @@
 {{! show owner info in sidebar }}
 
 <div class="gxx_sidebar_i">
-    <a class="gxx_myface" href="http://www.gxxsite.com/"><img src="{{asset "img/myface.png"}}" /></a>
-    <div class="gxx_myname"><b>关鑫贤</b><br /><span>前端工程师，全栈斗士</span></div>
+    <a class="gxx_myface"><img src="{{asset "img/me4.jpg"}}" /></a>
+    <div class="gxx_myname"><b>Mihajlo Simevski</b><br /><span>Front End，MEAN developer</span></div>
 </div>
 <div class="gxx_sidebar_i">
     <div class="gxx_mycontact">
-        <a class="gxxicon-mail" href="mailto://master@gxxsite.com" target="_blank" title="E-mail"></a>
-        <a class="gxxicon-qq" href="tencent://message/?uin=176512025" target="_blank" title="QQ"></a>
-        <a class="gxxicon-weibo" href="http://weibo.com/coolkp" target="_blank" title="新浪微博"></a>
-        <a class="gxxicon-bitbucket" href="https://bitbucket.org/coolhihi" target="_blank" title="Bitbucket"></a>
-        <a class="gxxicon-github" href="https://github.com/coolhihi" target="_blank" title="Github"></a>
-        <a class="gxxicon-facebook" href="https://www.facebook.com/guanxinxian" target="_blank" title="Facebook"></a>
+        <a class="gxxicon-facebook" href="https://www.facebook.com/msimevski" target="_blank" title="Facebook"></a>
+        <a class="gxxicon-github" href="https://github.com/smihajlo" target="_blank" title="Github"></a>
+        <a class="gxxicon-bitbucket" href="https://bitbucket.org/smihajlo" target="_blank" title="Bitbucket"></a>
+        <a class="gxxicon-mail" href="mailto://msimevskii@gmail.com" target="_blank" title="E-mail"></a>
     </div>
 </div>
 <!--
