--- a/post.hbs
+++ b/post.hbs
@@ -13,7 +13,7 @@
         <div class="post-meta">
             <i class="gxxicon-tag"></i>
             {{tags prefix=" "}}
-            <time class="post-date" datetime="{{date format='YYYY年MM月DD日'}}"><i class="gxxicon-time"></i> {{date format="YYYY年MM月DD日"}}</time>
+            <time class="post-date" datetime="{{date format='MMM Do, YYYY'}}"><i class="gxxicon-time"></i> {{date format="MMM Do, YYYY"}}</time>
             <div class="post-comment"><i class="gxxicon-comment"></i> <a href="{{url}}#disqus_thread"></a></div>
         </div>
 
