--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -930,13 +930,16 @@ a, a:visited, a:active, a:hover {
 
 .gxx_myface {
   display: inline-block;
-  width: 50%;
+  width: 60%;
   overflow: hidden;
   margin-top: 30px;
+
 }
 .gxx_myface img {
-  width: 100%;
-  border: none;
+    width: 87%;
+    border: none;
+    padding: 6px 6px 6px 0px;
+    border: 1px solid #eee;
 }
 
 .gxx_myname {
