--- a/partials/custom/config.hbs
+++ b/partials/custom/config.hbs
@@ -1,13 +1,10 @@
 {{! configs }}
 gxxconf={
-    //绑定的disqus评论shortname
-    disqus_shortname :'gxxsite',
+    //disqus shortname
+    disqus_shortname :'meandev',
     
-    //绑定的谷歌统计id
+    //analytics id
     googleanalyticsid:'UA-72264512-1',
     
-    //绑定的百度站内搜索sid
-    bdznsid          :'14132037153349902167',
-
     showtag          :10
 }
