--- a/partials/custom/sitetitle.hbs
+++ b/partials/custom/sitetitle.hbs
@@ -1,6 +1,6 @@
 {{! the site or blog title ,alos with description}}
 
 <div class="gxx_stitle">
-    <div class="gxx_sname">COoL</div>
-    <div class="gxx_ssign">a blog about my life</div>
+    <div class="gxx_sname">Mihajlo Simevski</div>
+    <div class="gxx_ssign">Aspiring MEAN developer</div>
 </div>
