--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -14,7 +14,7 @@
         {{author}}-->
         <i class="gxxicon-tag"></i>
         {{tags prefix=" "}}
-        <time class="post-date" datetime="{{date format='YYYY年MM月DD日'}}"><i class="gxxicon-time"></i> {{date format="YYYY年MM月DD日"}}</time>
+        <time class="post-date" datetime="{{date format='MMMM DD, YYYY'}}"><i class="gxxicon-time"></i> {{date format="MMMM DD, YYYY"}}</time>
         <div class="post-comment"><i class="gxxicon-comment"></i> <a href="{{url}}#disqus_thread"></a></div>
     </div>
     <section class="post-excerpt">
