--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -2,7 +2,7 @@
     {{#if prev}}
         <a class="newer-posts" href="{{page_url prev}}">&laquo; 上一页</a>
     {{/if}}
-    <span class="page-number">第 {{page}}/{{pages}} 页</span>
+    <span class="page-number">Page {{page}}/{{pages}} </span>
     {{#if next}}
         <a class="older-posts" href="{{page_url next}}">下一页 &raquo;</a>
     {{/if}}
